chore: improve the README